[gd_scene load_steps=3 format=3 uid="uid://c4ncpfggwnyia"]

[ext_resource type="Script" path="res://scenes/gui/options_menu/options_menu.gd" id="1_tkwsh"]
[ext_resource type="AudioStream" uid="uid://dhgv062lv8scl" path="res://sfx_pressed.mp3" id="2_dof3d"]

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tkwsh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 200.0
offset_top = 100.0
offset_right = 952.0
offset_bottom = 548.0
color = Color(0.731957, 0.675152, 0.944304, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 150

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxOptions" type="VBoxContainer" parent="MarginContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 106

[node name="VBoxVolume" type="VBoxContainer" parent="MarginContainer/TabContainer/VBoxOptions"]
layout_mode = 2
size_flags_vertical = 5
theme_override_constants/separation = 14
alignment = 1

[node name="label_master" type="Label" parent="MarginContainer/TabContainer/VBoxOptions/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 3
text = "Valume"
horizontal_alignment = 1

[node name="slider_master" type="HSlider" parent="MarginContainer/TabContainer/VBoxOptions/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.001

[node name="label_music" type="Label" parent="MarginContainer/TabContainer/VBoxOptions/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 6
text = "Music"
horizontal_alignment = 1

[node name="slider_music" type="HSlider" parent="MarginContainer/TabContainer/VBoxOptions/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.001

[node name="label_sfx" type="Label" parent="MarginContainer/TabContainer/VBoxOptions/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 6
text = "sfx"
horizontal_alignment = 1

[node name="slider_sfx" type="HSlider" parent="MarginContainer/TabContainer/VBoxOptions/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.001

[node name="Back" type="Button" parent="MarginContainer/TabContainer/VBoxOptions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "      Back      "

[node name="sfx_pressed" type="AudioStreamPlayer" parent="MarginContainer/TabContainer/VBoxOptions"]
stream = ExtResource("2_dof3d")
bus = &"sfx"

[node name="VBoxOptions2" type="VBoxContainer" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 106

[node name="VBoxVolume" type="VBoxContainer" parent="MarginContainer/TabContainer/VBoxOptions2"]
layout_mode = 2
size_flags_vertical = 5
theme_override_constants/separation = 14
alignment = 1

[node name="label_master" type="Label" parent="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 3
text = "Valume"
horizontal_alignment = 1

[node name="slider_master" type="HSlider" parent="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.001

[node name="label_music" type="Label" parent="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 6
text = "Music"
horizontal_alignment = 1

[node name="slider_music" type="HSlider" parent="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.001

[node name="label_sfx" type="Label" parent="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 6
text = "sfx"
horizontal_alignment = 1

[node name="slider_sfx" type="HSlider" parent="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.001

[node name="Back" type="Button" parent="MarginContainer/TabContainer/VBoxOptions2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "      Back      "

[node name="sfx_pressed" type="AudioStreamPlayer" parent="MarginContainer/TabContainer/VBoxOptions2"]
stream = ExtResource("2_dof3d")
bus = &"sfx"

[connection signal="changed" from="MarginContainer/TabContainer/VBoxOptions/VBoxVolume/slider_master" to="." method="_on_slider_master_changed"]
[connection signal="focus_exited" from="MarginContainer/TabContainer/VBoxOptions/VBoxVolume/slider_master" to="." method="_on_slider_master_focus_exited"]
[connection signal="value_changed" from="MarginContainer/TabContainer/VBoxOptions/VBoxVolume/slider_master" to="." method="_on_slider_master_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/VBoxOptions/VBoxVolume/slider_master" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/VBoxOptions/VBoxVolume/slider_music" to="." method="_on_slider_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/VBoxOptions/VBoxVolume/slider_sfx" to="." method="_on_slider_sfx_value_changed"]
[connection signal="pressed" from="MarginContainer/TabContainer/VBoxOptions/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/VBoxOptions/Back" to="." method="_on_quit_pressed"]
[connection signal="changed" from="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume/slider_master" to="." method="_on_slider_master_changed"]
[connection signal="focus_exited" from="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume/slider_master" to="." method="_on_slider_master_focus_exited"]
[connection signal="value_changed" from="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume/slider_master" to="." method="_on_slider_master_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume/slider_master" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume/slider_music" to="." method="_on_slider_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/TabContainer/VBoxOptions2/VBoxVolume/slider_sfx" to="." method="_on_slider_sfx_value_changed"]
[connection signal="pressed" from="MarginContainer/TabContainer/VBoxOptions2/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/VBoxOptions2/Back" to="." method="_on_quit_pressed"]
